--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.6.11",
     "vue-clickaway": "^2.2.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
