--- a/package.json
+++ b/package.json
@@ -9,13 +9,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-clickaway": "^2.2.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0",
-    "dotenv": "^8.2.0"
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
