--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.1",
+    "vue-clickaway": "^2.2.2",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
